# libdivecomputer

./: .gitignore  .travis.yml  Dockerfile  Makefile.am  NEWS  README  REPORT_v3.md  configure.ac  irda.c  irda.h  libdivecomputer.pc.in  reefnet.h  reefnet_sensuspro.c  reefnet_sensuspro.h  reefnet_sensuspro_test.c  reefnet_sensusultra.c  reefnet_sensusultra.h  reefnet_sensusultra_test.c  serial.h  serial_posix.c  serial_win32.c  suunto.h  suunto_d9.c  suunto_d9.h  suunto_d9_test.c  suunto_eon.c  suunto_eon.h  suunto_eon_test.c  suunto_test.c  suunto_vyper.c  suunto_vyper.h  suunto_vyper2.c  suunto_vyper2.h  suunto_vyper2_test.c  suunto_vyper_test.c  utils.c  uwatec.h  uwatec_aladin.c  uwatec_aladin.h  uwatec_aladin_test.c  (+6 more)
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
contrib/: README
contrib/android/: Android.mk
contrib/msvc/: libdivecomputer.vcxproj  libdivecomputer.vcxproj.filters
contrib/udev/: libdivecomputer.rules
doc/: Makefile.am  doxygen.cfg.in
doc/man/: Makefile.am  dc_bluetooth_addr2str.3  dc_bluetooth_device_free.3  dc_bluetooth_device_get_address.3  dc_bluetooth_device_get_name.3  dc_bluetooth_iterator_new.3  dc_bluetooth_open.3  dc_bluetooth_str2addr.3  dc_buffer_append.3  dc_buffer_free.3  dc_buffer_get_data.3  dc_buffer_get_size.3  dc_buffer_new.3  dc_buffer_prepend.3  dc_context_free.3  dc_context_new.3  dc_context_set_logfunc.3  dc_context_set_loglevel.3  dc_datetime_gmtime.3  dc_datetime_localtime.3  dc_datetime_mktime.3  dc_datetime_now.3  dc_descriptor_free.3  dc_descriptor_get_model.3  dc_descriptor_get_product.3  dc_descriptor_get_transports.3  dc_descriptor_get_vendor.3  dc_descriptor_iterator.3  dc_descriptor_iterator_new.3  dc_device_close.3  dc_device_foreach.3  dc_device_open.3  dc_device_set_cancel.3  dc_device_set_events.3  dc_device_set_fingerprint.3  dc_iostream_close.3  dc_irda_device_free.3  dc_irda_device_get_address.3  dc_irda_device_get_name.3  dc_irda_iterator_new.3  (+19 more)
examples/: Makefile.am  common.c  common.h  cressi_edy_test.c  cressi_leonardo_test.c  dctool.c  dctool.h  dctool_download.c  dctool_dump.c  dctool_fwupdate.c  dctool_help.c  dctool_list.c  dctool_parse.c  dctool_read.c  dctool_scan.c  dctool_timesync.c  dctool_version.c  dctool_write.c  hw_frog_test.c  hw_ostc_fwupdate.c  hw_ostc_test.c  mares_darwin_test.c  mares_darwinair_test.c  mares_iconhd_test.c  mares_nemo_test.c  mares_puck_test.c  oceanic_atom2_test.c  oceanic_veo250_test.c  oceanic_vtpro_test.c  output-private.h  output.c  output.h  output_raw.c  output_xml.c  reefnet_sensus_test.c  reefnet_sensuspro_test.c  reefnet_sensusultra_test.c  shearwater_predator_test.c  suunto_d9_test.c  suunto_eon_test.c  (+10 more)
include/: Makefile.am
include/libdivecomputer/: Makefile.am  atomics.h  atomics_cobalt.h  ble.h  bluetooth.h  buffer.h  citizen.h  citizen_aqualand.h  cochran.h  cochran_commander.h  common.h  context.h  cressi_edy.h  cressi_leonardo.h  custom.h  datetime.h  descriptor.h  device.h  diverite.h  diverite_nitekq.h  divesystem.h  divesystem_idive.h  hw.h  hw_frog.h  hw_ostc.h  hw_ostc3.h  ioctl.h  iostream.h  irda.h  iterator.h  mares.h  mares_darwin.h  mares_iconhd.h  mares_nemo.h  mares_puck.h  oceanic.h  oceanic_atom2.h  oceanic_veo250.h  oceanic_vtpro.h  parser.h  (+25 more)
m4/: pkg.m4
msvc/: libdivecomputer.vcproj  libdivecomputer.vcxproj
src/: Makefile.am  aes.c  aes.h  array.c  array.h  atomics_cobalt.c  atomics_cobalt.h  atomics_cobalt_parser.c  ble.c  bluetooth.c  bluetooth.h  buffer.c  buffer.h  checksum.c  checksum.h  citizen_aqualand.c  citizen_aqualand.h  citizen_aqualand_parser.c  cochran_commander.c  cochran_commander.h  cochran_commander_parser.c  common-private.h  common.c  context-private.h  context.c  cressi.h  cressi_edy.c  cressi_edy.h  cressi_edy_parser.c  cressi_goa.c  cressi_goa.h  cressi_goa_parser.c  cressi_leonardo.c  cressi_leonardo.h  cressi_leonardo_parser.c  crest_cr5l.c  crest_cr5l.h  crest_cr5l_parser.c  custom.c  custom.h  (+184 more)
