AM_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/include
LDADD = $(top_builddir)/src/libdivecomputer.la

bin_PROGRAMS = \
	dctool

dctool_SOURCES = \
	common.h \
	common.c \
	dctool.h \
	dctool.c \
	dctool_help.c \
	dctool_version.c \
	dctool_list.c \
	dctool_scan.c \
	dctool_download.c \
	dctool_dump.c \
	dctool_parse.c \
	dctool_read.c \
	dctool_write.c \
	dctool_timesync.c \
	dctool_fwupdate.c \
	output.h \
	output-private.h \
	output.c \
	output_xml.c \
	output_raw.c \
	utils.h \
	utils.c
