libdivecomputerdir = $(includedir)/libdivecomputer
libdivecomputer_HEADERS = 	\
	version.h \
	common.h \
	context.h \
	buffer.h \
	descriptor.h \
	iterator.h \
	iostream.h \
	ioctl.h \
	serial.h \
	bluetooth.h \
	ble.h \
	irda.h \
	usb.h \
	usbhid.h \
	custom.h \
	device.h \
	parser.h \
	datetime.h \
	units.h \
	suunto_eon.h \
	suunto_vyper2.h  \
	suunto_d9.h \
	reefnet_sensus.h \
	reefnet_sensuspro.h \
	reefnet_sensusultra.h \
	oceanic_atom2.h \
	oceanic_veo250.h \
	oceanic_vtpro.h \
	hw_ostc.h \
	hw_frog.h \
	hw_ostc3.h \
	atomics_cobalt.h \
	divesystem_idive.h
